--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         <version>4.6</version>
     </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
